[package]
name = "dirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = {version = "0.10", features = ["vendored"]}
tokio = {version = "1", features = ["full"]}
reqwest = "0.11.17"
futures = "0.3.28"
clap = { version = "4.2.7", features = ["derive"] }
indicatif = "0.17.3"
crossterm = "0.26.1"
